edited gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 fp-info-cache
 Atmega328p_board-backups
+Gerber files
+~Atmega328p_board.kicad_sch.lck
+~Atmega328p_board.kicad_pcb.lck
+Atmega328p_board.kicad_prl
