Completed 4 layer pcb routing

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Gerber files
 ~Atmega328p_board.kicad_sch.lck
 ~Atmega328p_board.kicad_pcb.lck
 Atmega328p_board.kicad_prl
+~_autosave-Atmega328p_board.kicad_pcb.lck
